--- a/ios/Minimal/Minimal/en.lproj/MainStoryboard.storyboard
+++ b/ios/Minimal/Minimal/en.lproj/MainStoryboard.storyboard
@@ -22,7 +22,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="button1Touched:" destination="2" eventType="touchUpInside" id="4Dx-fa-mOK"/>
+                                    <action selector="buttonTouched:" destination="2" eventType="touchUpInside" id="C0e-PE-jiQ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L57-fg-D1W">
@@ -35,7 +35,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="button2Touched:" destination="2" eventType="touchUpInside" id="m46-ba-BgA"/>
+                                    <action selector="buttonTouched:" destination="2" eventType="touchUpInside" id="Eft-Og-yX3"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rHF-wu-4ql">
@@ -48,18 +48,18 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="button3Touched:" destination="2" eventType="touchUpInside" id="Lgu-n1-nYz"/>
+                                    <action selector="buttonTouched:" destination="2" eventType="touchUpInside" id="WI6-TS-LuO"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="rHF-wu-4ql" firstAttribute="leading" secondItem="L57-fg-D1W" secondAttribute="leading" type="default" id="JI2-Jz-dDD"/>
-                            <constraint firstItem="jbc-1n-7Lw" firstAttribute="top" secondItem="3" secondAttribute="top" constant="103" id="Kgh-Lh-Dav"/>
-                            <constraint firstAttribute="bottom" secondItem="rHF-wu-4ql" secondAttribute="bottom" constant="222" id="ZDm-pa-k9R"/>
-                            <constraint firstItem="L57-fg-D1W" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="exn-7e-iwL"/>
+                            <constraint firstItem="jbc-1n-7Lw" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" type="user" id="Kgh-Lh-Dav"/>
+                            <constraint firstItem="L57-fg-D1W" firstAttribute="top" secondItem="jbc-1n-7Lw" secondAttribute="bottom" constant="20" type="user" id="Mkc-rt-PJO"/>
+                            <constraint firstItem="rHF-wu-4ql" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="cXl-OV-vQE"/>
+                            <constraint firstItem="rHF-wu-4ql" firstAttribute="top" secondItem="L57-fg-D1W" secondAttribute="bottom" constant="20" type="user" id="ekG-LX-jFO"/>
                             <constraint firstItem="L57-fg-D1W" firstAttribute="leading" secondItem="jbc-1n-7Lw" secondAttribute="leading" type="default" id="kd2-xO-ogf"/>
-                            <constraint firstItem="L57-fg-D1W" firstAttribute="top" secondItem="3" secondAttribute="top" constant="192" id="y0N-kb-hGM"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -67,6 +67,17 @@
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="MMViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MMViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="buttonTouched:"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
