--- a/IRKit/IRKitResources/IRNewPeripheralScene1ViewController.xib
+++ b/IRKit/IRKitResources/IRNewPeripheralScene1ViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IRNewPeripheralScene1ViewController">
@@ -39,7 +39,7 @@ IRKit</string>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="7" secondAttribute="centerY" constant="41" id="1eM-lI-Z99"/>
+                <constraint firstAttribute="centerY" secondItem="7" secondAttribute="centerY" constant="40" id="1eM-lI-Z99"/>
                 <constraint firstAttribute="centerX" secondItem="57" secondAttribute="centerX" id="3il-X0-dwb"/>
                 <constraint firstAttribute="centerX" secondItem="7" secondAttribute="centerX" id="A0A-Ub-ipa"/>
                 <constraint firstItem="57" firstAttribute="top" secondItem="7" secondAttribute="bottom" constant="15" id="EhW-MA-2de"/>
