added MPVolumeView for test

--- a/IRKit/IRKitResources/IRMorsePlayerViewController.xib
+++ b/IRKit/IRKitResources/IRMorsePlayerViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IRMorsePlayerViewController">
             <connections>
                 <outlet property="view" destination="74" id="104"/>
+                <outlet property="volumeView" destination="k2I-eo-h4L" id="frS-rJ-z8O"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -38,6 +39,11 @@
                         <action selector="startButtonPressed:" destination="-1" eventType="touchUpInside" id="lvF-gO-hBR"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k2I-eo-h4L" customClass="MPVolumeView">
+                    <rect key="frame" x="0.0" y="508" width="320" height="60"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
